operator/pkg/model/ingestion/testdata/gateway/mixed_protocol_listeners_TLSRoute/input-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: argocd-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
  - name: http-internal
    port: 80
    protocol: HTTP
  - name: https-internal
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: argocd-cert
  - name: tls-internal
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
status: {}
