operator/pkg/model/ingestion/testdata/gateway/mixed_protocol_listeners_TLSRoute/input-service.yaml
- metadata:
    creationTimestamp: null
    name: argocd-server
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
