operator/pkg/model/ingestion/testdata/gateway/mixed_protocol_listeners_TLSRoute/input-tlsroute.yaml
- metadata:
    creationTimestamp: null
    name: argocd-tlsroute
    namespace: default
  spec:
    hostnames:
    - argocd.example.com
    parentRefs:
    - name: argocd-gateway
    rules:
    - backendRefs:
      - name: argocd-server
        port: 443
  status:
    parents: null
