operator/pkg/model/ingestion/testdata/gateway/mixed_protocol_listeners_TLSRoute/output-listeners.yaml
- hostname: '*'
  mode: Passthrough
  name: tls-internal
  port: 443
  routes:
  - backends:
    - name: argocd-server
      namespace: default
      port:
        port: 443
    hostnames:
    - argocd.example.com
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: argocd-gateway
    namespace: default
    version: v1
